# enem-intelligence

./: .gitignore  CHECKLIST.md  DEPLOYMENT.md  IMPORTAR_MICRODADOS.md  QUICK_START_TRABALHO.md  README.md  TRABALHO.md  docker-compose.yml  setup.sh  setup_completo.sh
backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
backend/core/: urls.py
backend/core/settings/: base.py  dev.py  prod.py
backend/data/: README.md
backend/docs/: Dockerfile  environment.md  mkdocs.yml
backend/docs/docs/: 1º etapa-Checklist.md  environment.md  python_decouple_section.md
backend/enem/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  utils.py.backup  views.py
backend/enem/management/commands/: criar_aluno_fake.py  importar_microdados_enem.py  seed_enem.py
backend/enem/migrations/: 0001_initial.py  0002_estatisticaestado_remove_aluno_nota_ciencias_and_more.py
backend/scripts/: fetch_enem_data.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.scss  page.tsx
frontend/app/alunos/: alunos.module.scss  page.jsx
frontend/components/: BuscaAluno.jsx  BuscaAluno.jsx.backup  BuscaAluno.module.scss  Dashboard.jsx  Dashboard.module.scss  Dashboard.tsx  DashboardModerno.jsx  DashboardModerno.module.scss  DashboardStatus.jsx  Layout.jsx  Layout.module.scss  Sidebar.jsx  Sidebar.module.scss
frontend/services/: api.js
frontend/types/: enem.ts
scripts/: copiar_microdados.sh  download_microdados.sh  importar_todos_microdados.sh  iniciar_projeto.sh  parar_projeto.sh  preparar_dados.sh  setup.sh
(+8 files in other folders)
